--- a/RemoteWakeUp/ClientApp/index.html
+++ b/RemoteWakeUp/ClientApp/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>vue_quick_start</title>
+    <title>远程开机</title>
 </head>
 <body>
 <div id="app"></div>
